cmake_minimum_required(VERSION 3.28)
project(algorithms)

set(CMAKE_CXX_STANDARD 20)

add_executable(1 src/array/cpp/1.cpp)
add_executable(49 src/array/cpp/49.cpp)
add_executable(347 src/array/cpp/347.cpp)
add_executable(238 src/array/cpp/238.cpp)
add_executable(128 src/array/cpp/128.cpp)
add_executable(167 src/two-pointers/cpp/167.cpp)
add_executable(344 src/two-pointers/cpp/344.cpp)
add_executable(125 src/two-pointers/cpp/125.cpp)
add_executable(11 src/two-pointers/cpp/11.cpp)
add_executable(42 src/two-pointers/cpp/42.cpp)
add_executable(3 src/sliding-window/cpp/3.cpp)
add_executable(424 src/sliding-window/cpp/424.cpp)
add_executable(567 src/sliding-window/cpp/567.cpp)
add_executable(209 src/sliding-window/cpp/209.cpp)
#add_executable(76 src/sliding-window/cpp/76.cpp)
add_executable(121 src/sliding-window/cpp/121.cpp)
add_executable(20 src/stack/cpp/20.cpp)
